@@ -2,7 +2,6 @@ package ru.job4j.collect;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -13,12 +12,12 @@ import static org.hamcrest.Matchers.is;
 public class FullSearchTest {
     @Test
     public void extractNumber() {
-        List<Tasks> tasks = Arrays.asList(
+        List<Tasks> tasks = List.of(
                 new Tasks("1", "First desc"),
                 new Tasks("2", "Second desc"),
                 new Tasks("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = new HashSet<>(Set.of("1", "2"));
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 }
